# opengrader-py

./: README.md  answersheet.py  api_client.py  document.py  opengrader.py  requirements-dev.txt  requirements.txt  serializers.py  setup.cfg
example/: example_key.json
src/opengrader/: opengrader.py
src/opengrader/cvprocessor/: answersheet.py
src/opengradercv/common/: serializers.py
src/opengradercv/cvprocessor/: answersheet.py  document.py
src/opengradercv/restful/: api_client.py
tests/: answerkey.json
tests/example/: conceptos_frontend.txt
