[metadata]
name = OpengraderCv
description = A Python computer vision tool for automatic exam grading.
author = thatmaskedman
version = 0.0.1
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    find:
install_requires =
    numpy==1.23.3
    opencv-contrib-python==4.6.0.66
    opencv-python==4.6.0.66
    requests==2.28.1
python_requires = >=3.10
package_dir=
    =src
zip_safe = no

[options.packages.find]
where=src

[options.entry_points]
    console_scripts = 
        opengrader = opengrader:main